# DarkDriving-ICRA-2026

./: LICENSE  LICENSE.md  README.md
Enhancement/: README.md  pyproject.toml  test_darkdriving.py  train.py
Enhancement/data/: __init__.py  data_sampler.py  dataset_darkdriving_lle.py
Enhancement/models/: Video_base_model4_m.py  __init__.py  lr_scheduler.py
Enhancement/models/archs/transformer/: Models.py  Modules.py  Optim.py  __init__.py
Enhancement/options/: options.py
LLE/: requirements.txt
LLE/data/: util.py
LLE/models/: Video_base_model3.py  base_model.py  loss.py  networks.py
LLE/models/archs/: arch_util.py  low_light_transformer.py
LLE/models/archs/transformer/: Layers.py  SubLayers.py  Translator.py
LLE/options/test/: darkdriving_lle.yml
LLE/options/train/: darkdriving_lle.yml
LLE/scripts/: setup_env.sh  test_darkdriving.sh  train_darkdriving.sh
LLE/utils/: util.py
detection/: README.md  fine_tune.sh  pyproject.toml  val_darkdriving_det_release.sh  val_darkdriving_det_release_ft.sh  yolo_det.py
detection/config_release/: darkdriving_det_day.yaml  darkdriving_det_night.yaml  darkdriving_det_snr_aware_lol.yaml
detection/config_release_ft/: darkdriving_det_day.yaml  darkdriving_det_night.yaml  darkdriving_det_snr_aware_lol.yaml
