[project]
name = "yolo11-det"
version = "0.1.0"
description = "YOLOv11 detection validation and prediction scripts."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "absl-py==2.3.1",
    "addict==2.4.0",
    "basicsr==1.4.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "coloredlogs==15.0.1",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "facexlib==0.3.0",
    "filelock==3.18.0",
    "filterpy==1.4.5",
    "flatbuffers==25.2.10",
    "fonttools==4.58.0",
    "fsspec==2025.7.0",
    "future==1.0.0",
    "gfpgan==1.3.8",
    "grpcio==1.74.0",
    "hf-xet==1.1.5",
    "huggingface-hub==0.34.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "llvmlite==0.43.0",
    "lmdb==1.7.3",
    "markdown==3.8.2",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numba==0.60.0",
    "numpy==1.24.4",
    "onnx==1.17.0",
    "onnxruntime==1.19.2",
    "onnxruntime-gpu==1.19.2",
    "onnxslim==0.1.53",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "protobuf==6.31.0",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "pycocotools==2.0.8",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-image==0.24.0",
    "scipy==1.13.1",
    "six==1.17.0",
    "sympy==1.14.0",
    "tb-nightly==2.21.0a20250725",
    "tensorboard-data-server==0.7.2",
    "tifffile==2024.8.30",
    "timm==1.0.19",
    "tomli==2.2.1",
    "torch==1.13.1+cu117",
    "torchaudio==0.13.1+cu117",
    "torchvision==0.14.1+cu117",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "ultralytics==8.3.137",
    "ultralytics-thop==2.0.14",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "yapf==0.43.0",
    "zipp==3.21.0",
]

[project.scripts]
yolo11-det = "yolo_det:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["yolo_det"]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu117" }
torchaudio = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }
